--- a/index.html
+++ b/index.html
@@ -34,14 +34,17 @@
         <a href="https://www.facebook.com/" target="_blank" class="nav__social-link">
           <i class="uil uil-facebook-f"></i>
         </a>
-        <a href="https://www.twitter.com/" target="_blank" class="nav__social-link">
+        <a href="https://x.com/home" target="_blank" class="nav__social-link">
           <i class="uil uil-twitter"></i>
         </a>
-        <a href="https://www.linkedin.com/" target="_blank" class="nav__social-link">
+        <a href="https://www.linkedin.com/in/damarasingi-sai-teja-846305262/" target="_blank" class="nav__social-link">
           <i class="uil uil-linkedin"></i>
         </a>
-        <a href="https://www.instagram.com/" target="_blank" class="nav__social-link">
+        <a href="https://www.instagram.com/saiteja_damarasingi/" target="_blank" class="nav__social-link">
           <i class="uil uil-instagram"></i>
+        </a>
+        <a href="https://github.com/DSaiTeja123" target="_blank" class="nav__social-link">
+          <i class="uil uil-github"></i>
         </a>
       </div>
       <div class="nav__btns">
@@ -256,14 +259,17 @@
         <a href="https://www.facebook.com/" target="_blank" class="footer__social-link">
           <i class="uil uil-facebook-f"></i>
         </a>
-        <a href="https://www.twitter.com/" target="_blank" class="footer__social-link">
+        <a href="https://x.com/home/" target="_blank" class="footer__social-link">
           <i class="uil uil-twitter"></i>
         </a>
-        <a href="https://www.linkedin.com/" target="_blank" class="footer__social-link">
+        <a href="https://www.linkedin.com/in/damarasingi-sai-teja-846305262/" target="_blank" class="footer__social-link">
           <i class="uil uil-linkedin"></i>
         </a>
-        <a href="https://www.instagram.com/" target="_blank" class="footer__social-link">
+        <a href="https://www.instagram.com/saiteja_damarasingi/" target="_blank" class="footer__social-link">
           <i class="uil uil-instagram"></i>
+        </a>
+        <a href="https://github.com/DSaiTeja123" target="_blank" class="footer__social-link">
+          <i class="uil uil-github"></i>
         </a>
       </div>
       <p class="footer__copyright">&copy; 2024. All Rights Reserved.</p>
